// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Live Validator Initialize cache and validate should report error in response for GET/PUT resource calls when id is not returned 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "MISSING_RESOURCE_ID",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$",
        ],
        "message": "id is required to return in response of GET/PUT resource calls but not provided",
        "params": Array [],
        "pathsInPayload": Array [
          "",
        ],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/LinkerResource",
          "position": Object {
            "column": 23,
            "line": 572,
          },
          "url": "specification/servicelinker/resource-manager/Microsoft.ServiceLinker/preview/2021-01-01-privatepreview/servicelinker.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should report error in response when response code isn't correct in case of long running operation 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_Update",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "LRO_RESPONSE_CODE",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [],
        "message": "For initial request, Patch/Post long running operation must return 201 or 202, Delete long running operation must return 202 or 204, Put long running operation must return 202 or 201 or 200, but 204 returned",
        "pathsInPayload": Array [],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "position": Object {
            "column": 22,
            "line": 300,
          },
          "url": "specification/servicelinker/resource-manager/Microsoft.ServiceLinker/preview/2021-01-01-privatepreview/servicelinker.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_Update",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should report error when LRO header is not returned in response in case of long running operation 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "LRO_RESPONSE_HEADER",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [],
        "message": "Long running operation should return location or azure-AsyncOperation in header but not provided",
        "pathsInPayload": Array [],
        "schemaPath": "",
        "severity": 0,
        "source": Object {
          "position": Object {
            "column": 22,
            "line": 177,
          },
          "url": "specification/servicelinker/resource-manager/Microsoft.ServiceLinker/preview/2021-01-01-privatepreview/servicelinker.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should return no errors for valid input with optional parameter body empty 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should return no errors for valid input with optional parameter body null 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should match all errors for no options 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.email",
        ],
        "message": "Missing required property: email",
        "params": Array [
          "email",
        ],
        "pathsInPayload": Array [
          "/properties/email",
        ],
        "schemaPath": "#/required",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserCreateParameterProperties",
          "position": Object {
            "column": 38,
            "line": 696,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.lastName",
        ],
        "message": "Expected type string but found type integer",
        "params": Array [
          "string",
          "integer",
        ],
        "pathsInPayload": Array [
          "/properties/lastName",
        ],
        "schemaPath": "#/properties/lastName/type",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserContractProperties/properties/lastName",
          "position": Object {
            "column": 21,
            "line": 657,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.registrationDate",
        ],
        "message": "Object didn't pass validation for format date-time: 2018-09-11",
        "params": Array [
          "date-time",
          "2018-09-11",
        ],
        "pathsInPayload": Array [
          "/properties/registrationDate",
        ],
        "schemaPath": "#/properties/registrationDate/format",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserContractProperties/properties/registrationDate",
          "position": Object {
            "column": 29,
            "line": 665,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
      Object {
        "code": "OBJECT_ADDITIONAL_PROPERTIES",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].id",
        ],
        "message": "Additional properties not allowed: id",
        "params": Array [
          "id",
        ],
        "pathsInPayload": Array [
          "/properties/groups/0/id",
        ],
        "schemaPath": "#/additionalProperties",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
      Object {
        "code": "ENUM_CASE_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.state",
        ],
        "message": "Enum does not match case for: Active",
        "params": Array [
          "Active",
          Array [
            "active",
            "blocked",
            "pending",
            "deleted",
          ],
        ],
        "pathsInPayload": Array [
          "/properties/state",
        ],
        "schemaPath": "#/properties/state/enum",
        "severity": 1,
        "source": Object {
          "jsonRef": "#/definitions/UserEntityBaseParameters/properties/state",
          "position": Object {
            "column": 18,
            "line": 750,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should match for one of missing 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.policyId",
        ],
        "message": "Object didn't pass validation for format uuid: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "params": Array [
          "uuid",
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "pathsInPayload": Array [
          "/properties/policyId",
        ],
        "schemaPath": "#/properties/policyId/format",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ContentKeyPolicyProperties/properties/policyId",
          "position": Object {
            "column": 21,
            "line": 688,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.options[0].policyOptionId",
        ],
        "message": "Object didn't pass validation for format uuid: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "params": Array [
          "uuid",
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "pathsInPayload": Array [
          "/properties/options/0/policyOptionId",
        ],
        "schemaPath": "#/properties/policyOptionId/format",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ContentKeyPolicyOption/properties/policyOptionId",
          "position": Object {
            "column": 27,
            "line": 659,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.options[0].restriction.audience",
        ],
        "message": "Missing required property: audience",
        "params": Array [
          "audience",
        ],
        "pathsInPayload": Array [
          "/properties/options/0/restriction/audience",
        ],
        "schemaPath": "#/discriminatorMap",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ContentKeyPolicyTokenRestriction",
          "position": Object {
            "column": 41,
            "line": 446,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should pass discriminator tests 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.pet.lifetime",
        ],
        "message": "Object didn't pass validation for format date-time: abc",
        "params": Array [
          "date-time",
          "abc",
        ],
        "pathsInPayload": Array [
          "/pet/lifetime",
        ],
        "schemaPath": "#/discriminatorMap",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/Cat/properties/lifetime",
          "position": Object {
            "column": 21,
            "line": 169,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return expected error for readonly property in the request 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "READONLY_PROPERTY_NOT_ALLOWED_IN_REQUEST",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.name",
        ],
        "message": "ReadOnly property \\"name\\" cannot be sent in the request",
        "params": Array [
          "name",
          null,
        ],
        "pathsInPayload": Array [
          "/name",
        ],
        "schemaPath": "#/properties/name/readOnly",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/User/properties/name",
          "position": Object {
            "column": 17,
            "line": 123,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
      Object {
        "code": "READONLY_PROPERTY_NOT_ALLOWED_IN_REQUEST",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.readOnlyProperty",
        ],
        "message": "ReadOnly property \\"readOnlyProperty\\" cannot be sent in the request",
        "params": Array [
          "readOnlyProperty",
          null,
        ],
        "pathsInPayload": Array [
          "/readOnlyProperty",
        ],
        "schemaPath": "#/properties/readOnlyProperty/x-ms-mutability",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/User/properties/readOnlyProperty",
          "position": Object {
            "column": 29,
            "line": 132,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return no errors for valid input 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_CASE_MISMATCH 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_CASE_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].type",
        ],
        "message": "Enum does not match case for: System",
        "params": Array [
          "System",
          Array [
            "custom",
            "system",
            "external",
          ],
        ],
        "pathsInPayload": Array [
          "/properties/groups/0/type",
        ],
        "schemaPath": "#/properties/type/enum",
        "severity": 1,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": Object {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_MISMATCH 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.state",
        ],
        "message": "No enum match for: dasda",
        "params": Array [
          "dasda",
          Array [
            "active",
            "blocked",
            "pending",
            "deleted",
          ],
        ],
        "pathsInPayload": Array [
          "/properties/state",
        ],
        "schemaPath": "#/properties/state/enum",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/UserEntityBaseParameters/properties/state",
          "position": Object {
            "column": 18,
            "line": 750,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].type",
        ],
        "message": "No enum match for: banana",
        "params": Array [
          "banana",
          Array [
            "custom",
            "system",
            "external",
          ],
        ],
        "pathsInPayload": Array [
          "/properties/groups/0/type",
        ],
        "schemaPath": "#/properties/type/enum",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": Object {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_FORMAT 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.createdAtUtc",
        ],
        "message": "Object didn't pass validation for format date-time: 0001-01-01T00:00:00",
        "params": Array [
          "date-time",
          "0001-01-01T00:00:00",
        ],
        "pathsInPayload": Array [
          "/properties/createdAtUtc",
        ],
        "schemaPath": "#/properties/createdAtUtc/format",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiManagementServiceBaseProperties/properties/createdAtUtc",
          "position": Object {
            "column": 25,
            "line": 903,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimdeployment.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_RESPONSE_BODY 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_RESPONSE_BODY",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          ".body",
        ],
        "message": "Body is required in response but not provided",
        "params": Array [
          "body",
        ],
        "pathsInPayload": Array [
          "/body",
        ],
        "schemaPath": "#/required",
        "severity": 0,
        "source": Object {
          "position": Object {
            "column": 18,
            "line": 178,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_RESPONSE_HEADER 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_RESPONSE_HEADER",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          ".headers.etag",
        ],
        "message": "Header etag is required in response but not provided",
        "params": Array [
          "etag",
        ],
        "pathsInPayload": Array [
          "/headers/etag",
        ],
        "schemaPath": "#/properties/headers/required",
        "severity": 0,
        "source": Object {
          "position": Object {
            "column": 24,
            "line": 183,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_TYPE 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.hostnameConfigurations",
        ],
        "message": "Expected type array but found type string",
        "params": Array [
          "array",
          "string",
        ],
        "pathsInPayload": Array [
          "/properties/hostnameConfigurations",
        ],
        "schemaPath": "#/properties/hostnameConfigurations/type",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiManagementServiceBaseProperties/properties/hostnameConfigurations",
          "position": Object {
            "column": 35,
            "line": 934,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimdeployment.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for MAX_LENGTH 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "MAX_LENGTH",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.description",
        ],
        "message": "String is too long (1958 chars), maximum 1000",
        "params": Array [
          1958,
          1000,
        ],
        "pathsInPayload": Array [
          "/properties/description",
        ],
        "schemaPath": "#/properties/description/maxLength",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/OperationEntityBaseContract/properties/description",
          "position": Object {
            "column": 24,
            "line": 4076,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for MISSING_REQUIRED_PARAMETER 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [
      Object {
        "code": "MISSING_REQUIRED_PARAMETER",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          ".body",
        ],
        "message": "Value is required but was not provided",
        "params": Array [
          "body",
        ],
        "pathsInPayload": Array [
          "/body",
        ],
        "schemaPath": "#/required",
        "severity": 0,
        "source": Object {
          "position": Object {
            "column": 11,
            "line": 197,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_ADDITIONAL_PROPERTIES 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_ADDITIONAL_PROPERTIES",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].id",
          "$.properties.groups[1].id",
        ],
        "message": "Additional properties not allowed: id",
        "params": Array [
          "id",
        ],
        "pathsInPayload": Array [
          "/properties/groups/0/id",
          "/properties/groups/1/id",
        ],
        "schemaPath": "#/additionalProperties",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_MISSING_REQUIRED_PROPERTY 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.groups[0].displayName",
        ],
        "message": "Missing required property: displayName",
        "params": Array [
          "displayName",
        ],
        "pathsInPayload": Array [
          "/properties/groups/0/displayName",
        ],
        "schemaPath": "#/required",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": Object {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_PROPERTIES_MAXIMUM 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_PROPERTIES_MAXIMUM",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.testMaxMinProperties",
        ],
        "message": "Too many properties defined (4), maximum 3",
        "params": Array [
          4,
          3,
        ],
        "pathsInPayload": Array [
          "/testMaxMinProperties",
        ],
        "schemaPath": "#/properties/testMaxMinProperties/maxProperties",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiContract/properties/testMaxMinProperties",
          "position": Object {
            "column": 33,
            "line": 3505,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_PROPERTIES_MINIMUM 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "OBJECT_PROPERTIES_MINIMUM",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.testMaxMinProperties",
        ],
        "message": "Too few properties defined (1), minimum 2",
        "params": Array [
          1,
          2,
        ],
        "pathsInPayload": Array [
          "/testMaxMinProperties",
        ],
        "schemaPath": "#/properties/testMaxMinProperties/minProperties",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/ApiContract/properties/testMaxMinProperties",
          "position": Object {
            "column": 33,
            "line": 3505,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for SECRET_PROPERTY 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "SecretUser_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "SECRET_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.password",
        ],
        "message": "Secret property \\"password\\" cannot be sent in the response",
        "params": Array [
          "password",
          null,
        ],
        "pathsInPayload": Array [
          "/properties/password",
        ],
        "schemaPath": "#/properties/password/x-ms-secret",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/SecretUserContractProperties/properties/password",
          "position": Object {
            "column": 21,
            "line": 146,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusersecret.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "SecretUser_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE 1`] = `
Object {
  "requestValidationResult": Object {
    "errors": Array [],
    "isSuccessful": true,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "WriteOnlyProperty_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": Object {
    "errors": Array [
      Object {
        "code": "WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE",
        "documentationUrl": "",
        "jsonPathsInPayload": Array [
          "$.properties.propertyUsage",
        ],
        "message": "Write-only property \\"propertyUsage\\" is not allowed in the response",
        "params": Array [
          "propertyUsage",
          null,
        ],
        "pathsInPayload": Array [
          "/properties/propertyUsage",
        ],
        "schemaPath": "#/properties/propertyUsage/x-ms-mutability",
        "severity": 0,
        "source": Object {
          "jsonRef": "#/definitions/WriteOnlyPropertyContractProperties/properties/propertyUsage",
          "position": Object {
            "column": 26,
            "line": 142,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimwriteonly.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": Object {
      "apiVersion": "2018-01-01",
      "operationId": "WriteOnlyProperty_Get",
    },
    "runtimeException": undefined,
  },
}
`;
